--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
         "tw-animate-css": "^1.2.4",
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
-        "zod": "^3.25.76"
+        "zod": "^3.25.76",
+        "vite": "^6.x.x",
+        "@vitejs/plugin-react": "^4.x.x"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
