--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
         "zod": "^3.25.76",
-        "vite": "^6.x.x",
-        "@vitejs/plugin-react": "^4.x.x"
+        "vite": "^6.0.0",
+        "@vitejs/plugin-react": "^4.0.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
