--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "lint": "eslint .",
         "optimize": "vite optimize",
         "preview": "vite preview",
-        "start": "vite preview --port $PORT"
+        "start": "npx vite preview --port $PORT"
     },
     "dependencies": {
         "@github/spark": "^0.39.0",
@@ -74,7 +74,7 @@
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
         "zod": "^3.25.76",
-        "vite": "^6.0.0",
+        "vite": "^x.x.x",
         "@vitejs/plugin-react": "^4.0.0"
     },
     "devDependencies": {
@@ -90,8 +90,7 @@
         "globals": "^16.0.0",
         "tailwindcss": "^4.1.11",
         "typescript": "~5.7.2",
-        "typescript-eslint": "^8.38.0",
-        "vite": "^6.3.5"
+        "typescript-eslint": "^8.38.0"
     },
     "workspaces": {
         "packages": [
