--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "lint": "eslint .",
         "optimize": "vite optimize",
         "preview": "vite preview",
-        "start": "npx vite preview --port $PORT"
+        "start": "npx vite preview --port $PORT --host"
     },
     "dependencies": {
         "@github/spark": "^0.39.0",
@@ -75,7 +75,8 @@
         "vaul": "^1.1.2",
         "zod": "^3.25.76",
         "vite": "^x.x.x",
-        "@vitejs/plugin-react": "^4.0.0"
+        "@vitejs/plugin-react": "^4.0.0",
+        "serve": "^14.2.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
